# pmwhale

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  backtest.py  client.py  collect.py  pyproject.toml  rank.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: ENDPOINTS.md  README.ru.md  RELEASE.md
src/pmwhale/: __init__.py  __main__.py  backtest.py  client.py  collect.py  rank.py
tests/: test_backtest.py  test_client.py  test_collect.py  test_rank.py
ui/: .dockerignore  Dockerfile  THIRD_PARTY_LICENSES.txt  docker-compose.yml  index.html  package.json  server.ts  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx
