[project]
name = "pmwhale"
version = "0.1.0"
description = "Research toolkit for Polymarket whale-copy strategies: collect public on-chain/API data, rank wallets by risk-adjusted PnL, and honestly backtest copy-trading with latency and slippage."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
