[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pmwhale"
version = "0.1.0"
description = "Research toolkit for collecting public Polymarket data and studying whale-copy hypotheses."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "smadrom", email = "sn.one.dev@gmail.com" },
]
maintainers = [
    { name = "smadrom", email = "sn.one.dev@gmail.com" },
]
keywords = ["polymarket", "prediction-markets", "research", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pip-audit>=2.7.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "twine>=6.1",
]

[project.scripts]
pmwhale-backtest = "pmwhale.backtest:main"
pmwhale-collect = "pmwhale.collect:main"
pmwhale-rank = "pmwhale.rank:main"

[project.urls]
Homepage = "https://github.com/smadrom/pmwhale"
Documentation = "https://github.com/smadrom/pmwhale#readme"
Issues = "https://github.com/smadrom/pmwhale/issues"
Source = "https://github.com/smadrom/pmwhale"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=pmwhale --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
